@@ -6,7 +6,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -17,30 +17,15 @@ public class CorsConfig {
 
         config.setAllowCredentials(true);
 
-        // ---------- ALLOWED ORIGINS ----------
-        config.setAllowedOriginPatterns(Arrays.asList(
-                "http://localhost:5173",
-                "http://localhost:3000",
-                "http://localhost:8080",
-                "https://*.vercel.app",
+        // 🔥 ONLY FRONTEND DOMAIN ALLOWED
+        config.setAllowedOrigins(List.of(
                 "https://balc-fawn.vercel.app",
-                "*"
+                "http://localhost:5173"
         ));
 
-        // ---------- ALLOWED METHODS ----------
-        config.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS"
-        ));
-
-        // ---------- ALLOWED HEADERS ----------
-        config.setAllowedHeaders(Arrays.asList(
-                "*"
-        ));
-
-        // ---------- EXPOSED HEADERS ----------
-        config.setExposedHeaders(Arrays.asList(
-                "Authorization"
-        ));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(List.of("Authorization"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
